# MintMyDeal

./: DEPLOYMENT_CHECKLIST.md  ENHANCED_TOASTS.md  INTEGRATION_SUMMARY.md  LOADERS_IMPLEMENTATION.md  MARKETPLACE_COMPLETE.md  MARKETPLACE_INTEGRATED.md  MARKETPLACE_QUICKSTART.md  MARKETPLACE_README.md  MARKETPLACE_SUMMARY.md  MARKETPLACE_TEST.md  MARKETPLACE_VISUAL_GUIDE.md  MERCHANT_PAGE_IMPROVEMENTS.md  NAVBAR_IMPROVEMENTS.md  NFT_TROUBLESHOOTING.md  PRESENTATION_SCRIPT.docx  README.md  REVIEWS_FEATURE.md  REVIEW_FEATURE_STATUS.md  TOAST_EXAMPLES.md  TOAST_NOTIFICATIONS.md
contracts/: Cargo.toml  README.md
contracts/cli/: Cargo.toml
contracts/cli/src/: main.rs
contracts/programs/deal_platform/: Cargo.toml  program-id
contracts/programs/deal_platform/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
contracts/scripts/: devnet-deploy.sh  devnet-test.sh  local-deploy.sh  local-test.sh
contracts/tests/: bun.toml  package.json
contracts/tests/src/: deal_platform.test.ts
contracts/tests/src/helpers/: borsh.ts  layout.ts
frontend/: README.md  next.config.js  notes.txt  package-lock.json  package.json  tsconfig.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/api/irys-upload/: route.ts
frontend/src/app/deals/: page.tsx
frontend/src/app/deals/[id]/: page.tsx
frontend/src/app/marketplace/: page.tsx
frontend/src/app/merchant/: page.tsx
frontend/src/app/redeem/: page.tsx
frontend/src/components/: Loader.tsx  Navbar.tsx  Toast.tsx
frontend/src/lib/solana/: Providers.tsx  errors.ts  instructions.ts
frontend/src/lib/toast/: ToastContext.tsx
frontend/src/lib/umi/: client.ts  mint.ts
