[workspace]
members = [
	"programs/deal_platform",
	"cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
authors = ["MonkeDAO Hackathon Team"]

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
borsh = "0.10"
borsh-derive = "0.10"
bytemuck = "1"
solana-program = "1.18.21"
solana-sdk = "1.18.21"
solana-client = "1.18.21"
solana-program-test = "1.18.21"
solana-logger = "1.18.21"
solana-rpc-client = "1.18.21"
solana-transaction-status = "1.18.21"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror-no-std = "2"
num-derive = "0.4"
num-traits = "0.2"
